[gd_scene load_steps=3 format=3 uid="uid://df6lfakh5qtxu"]

[ext_resource type="Script" uid="uid://cihriqpjixatv" path="res://prefabs/UI/chatbox.gd" id="1_kfpen"]
[ext_resource type="Theme" uid="uid://bkj0ffyt1gs7h" path="res://fonts/theme.tres" id="2_k63ie"]

[node name="Chatbox" type="CanvasLayer"]
script = ExtResource("1_kfpen")

[node name="Label" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -162.0
offset_top = -22.0
offset_right = -10.0
offset_bottom = 1.0
grow_horizontal = 0
grow_vertical = 0
theme = ExtResource("2_k63ie")
text = "Press TAB to toggle chat"

[node name="Chatbox" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_k63ie")

[node name="PanelContainer" type="PanelContainer" parent="Chatbox"]
custom_minimum_size = Vector2(256, 192)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -192.0
grow_horizontal = 0
grow_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="Chatbox/PanelContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="Chatbox/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="ChatContainer" type="VBoxContainer" parent="Chatbox/PanelContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Chatbox/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Button" type="Button" parent="Chatbox/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Send"

[node name="LineEdit" type="LineEdit" parent="Chatbox/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "Enter Message"

[node name="HBoxContainer2" type="HBoxContainer" parent="Chatbox/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Chatbox/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Username:"

[node name="LineEdit2" type="LineEdit" parent="Chatbox/PanelContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3
text = "Eiko"
placeholder_text = "Username"

[connection signal="pressed" from="Chatbox/PanelContainer/VBoxContainer/HBoxContainer/Button" to="." method="_on_send_pressed"]
